change CV, fix contraste keywords, fix CV button onClick

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ p,span {
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 225, 72.73%, 56.86%;
+    --primary: 225 72.73% 56.86%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
